syntax="proto3";

package yandexcloud.datatransfer.dtextension.v0_2.sink;
option go_package = "kry127.ru/dtextension/go/pkg/api/v0_2/sink";

import "api/v0_2/common.proto";
import "api/v0_2/sink/write.proto";

service SinkService {
    // Spec is method for determining endpoint settings available for configuring
    rpc Spec(SpecReq) returns (SpecRsp) {}
    // Check is method that checks settings of endpoint are comply to specification
    // In order to see specification see Spec handle
    rpc Check(CheckReq) returns (CheckRsp) {}

    rpc Write(stream WriteReq) returns (stream WriteRsp) {}
}


message WriteReq {
    WriteControlItemReq control_item_req = 1;

}
message WriteRsp {
    Result result = 1;
    WriteControlItemRsp control_item_rsp = 2;
}
