syntax="proto3";

package yandexcloud.datatransfer.dtextension.v1;

import "proto/api/v1/common.proto";
import "proto/api/v1/tasks.proto";

service TaskService {
    rpc GetTask(TaskId) returns (Task);
    rpc PersistTask(TaskId) returns (PersistedTask);

    rpc GetParentTasks(TaskId) returns (TaskIds);
    rpc GetChildTasks(TaskId) returns (TaskIds);

    rpc SplitTask(TaskId) returns (SplitTaskResponse);
    // applicable for snapshot task and stream task
    rpc GetChangeItems(stream GetChangeItemsRequest) returns (stream GetChangeItemsResponse);
    // applicable for sink task
    rpc PutChangeItems(stream PutChangeItemsRequest) returns (stream PutChangeItemsResponse);
}

message TaskId {
    string transfer_id = 1;
    uint32 task_id = 2;
}

message TaskIds {
    repeated uint32 task_ids = 1;
}

message SplitTaskResponse {
    oneof response {
        Ok ok = 1;
        ErrorResponse error = 2;
    }

    message Ok {
        repeated uint32 task_ids = 1;
    }
}

message GetChangeItemsRequest {
    TaskId task_id = 1;
    uint64 begin_from_lsn = 2;
}

message GetChangeItemsResponse {
    uint64 stream_lsn = 1;
    repeated ChangeItem change_item = 2;
}

message PutChangeItemsRequest {
    TaskId task_id = 1;
    uint64 stream_lsn = 2;
    repeated ChangeItem change_item = 3;
}

message PutChangeItemsResponse {
    uint64 last_lsn = 1;
}

